Tue Jan 31 15:11:29 UTC 2006  William Otte  <wotte@dre.vanderbilt.edu>

        * RACE/Controller/Component/Controller.mpc
        
        Fixed linking errors on OS X.

Tue Jan 31 14:41:31 UTC 2006  Gan Deng  <gan.deng@vanderbilt.edu>

        * DAnCE/DomainApplicationManager/DomainApplicationManager_Impl.cpp
        * DAnCE/NodeManager/NodeManager_Impl.cpp
        
          Fixed a couple of warning on SuSE_10_0_GCC4.0.2_x86_64_Valgrind
          build.

Tue Jan 31 11:42:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * DAnCE/NodeManager/NodeManager_Impl.cpp:
          Fixed compile error with VxWorks 5.5.1

Mon Jan 30 22:43:26 UTC 2006  Stoyan Paunov  <spaunov@isis.vanderbilt.edu>

        * examples/Hello/descriptors/run_NodeDaemons.pl:

          Fixing this script so that the Hello example deploys successfully.

Mon Jan 30 21:16:40 UTC 2006  Ming Xiong <ming.xiong@vanderbilt.edu>

        * docs/tutorials/CoSMIC/01.html
        * docs/tutorials/CoSMIC/02.html
        * docs/tutorials/CoSMIC/03.html
        * docs/tutorials/CoSMIC/04.html
        * docs/tutorials/CoSMIC/index.html
        * docs/tutorials/CoSMIC/Icons/AddConnMode.gif
        * docs/tutorials/CoSMIC/Icons/SetMode.gif
        * docs/tutorials/CoSMIC/Images/fig1.jpg
        * docs/tutorials/CoSMIC/Images/fig10.jpg
        * docs/tutorials/CoSMIC/Images/fig11.jpg
        * docs/tutorials/CoSMIC/Images/fig2.jpg
        * docs/tutorials/CoSMIC/Images/fig3.jpg
        * docs/tutorials/CoSMIC/Images/fig4.jpg
        * docs/tutorials/CoSMIC/Images/fig5.jpg
        * docs/tutorials/CoSMIC/Images/fig6.jpg
        * docs/tutorials/CoSMIC/Images/fig7.jpg
        * docs/tutorials/CoSMIC/Images/fig8.jpg
        * docs/tutorials/CoSMIC/Images/fig9.jpg
        * docs/tutorials/CoSMIC/Model/Quoter.xme

          Added CoSMIC tutorial for /docs/tutorials/Quoter/Simple

Mon Jan 30 17:50:38 UTC 2006  Gan Deng  <gan.deng@vanderbilt.edu>
