@@ -1,3 +1,10 @@
+Tue Jan 31 21:29:06 UTC 2006  William Otte  <wotte@dre.vanderbilt.edu>
+
+        * examples/Hello/descriptors/run_test.pl
+        
+          Updated to force naming service to not use multicast, instead
+          using NameServiceIOR environment variable.
+
 Tue Jan 31 15:11:29 UTC 2006  William Otte  <wotte@dre.vanderbilt.edu>
 
         * RACE/Controller/Component/Controller.mpc
